8. Combine the Data

--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -415,17 +415,17 @@
        "05/2013         7\n",
        "05/2012         6\n",
        "04/2013         2\n",
-       "08/2012         2\n",
-       "04/2014         2\n",
-       "07/2014         2\n",
        "02/2014         2\n",
-       "2014            1\n",
+       "04/2014         2\n",
+       "08/2012         2\n",
+       "07/2014         2\n",
        "07/2012         1\n",
        "09/2010         1\n",
        "11/2012         1\n",
-       "09/2014         1\n",
        "2010            1\n",
        "07/2006         1\n",
+       "2014            1\n",
+       "09/2014         1\n",
        "Name: Cease Date, dtype: int64"
       ]
      },
@@ -462,35 +462,35 @@
        "1990          20\n",
        "1999          19\n",
        "1996          19\n",
-       "1991          18\n",
        "2000          18\n",
-       "1992          18\n",
        "2004          18\n",
+       "1992          18\n",
+       "1991          18\n",
        "1989          17\n",
-       "2003          15\n",
        "1988          15\n",
-       "1976          15\n",
        "1978          15\n",
+       "2003          15\n",
        "2002          15\n",
-       "1997          14\n",
+       "1976          15\n",
        "1980          14\n",
-       "1995          14\n",
-       "1974          14\n",
+       "1997          14\n",
        "1979          14\n",
+       "1974          14\n",
        "1998          14\n",
+       "1995          14\n",
        "1993          13\n",
        "1972          12\n",
        "1986          12\n",
        "1977          11\n",
-       "1969          10\n",
-       "1994          10\n",
-       "1971          10\n",
-       "1984          10\n",
        "2001          10\n",
+       "1971          10\n",
+       "1969          10\n",
+       "1984          10\n",
+       "1994          10\n",
        "1981           9\n",
        "1983           9\n",
-       "1985           8\n",
        "1973           8\n",
+       "1985           8\n",
        "1987           7\n",
        "1982           4\n",
        "1963           4\n",
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732bcbc7",
+   "id": "e466cee0",
    "metadata": {},
    "source": [
     "## Verify the Data\n",
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d1190dd",
+   "id": "3505fcf0",
    "metadata": {},
    "source": [
     "We'll first clean the `cease_date` column in `dete_resignations`. We'll only want to work with the year value."
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "09259300",
+   "id": "c55dde34",
    "metadata": {},
    "outputs": [
     {
@@ -1716,9 +1716,9 @@
        "05/2012      2\n",
        "05/2013      2\n",
        "09/2010      1\n",
-       "2010         1\n",
-       "07/2006      1\n",
        "07/2012      1\n",
+       "07/2006      1\n",
+       "2010         1\n",
        "Name: cease_date, dtype: int64"
       ]
      },
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a75a45b2",
+   "id": "80994a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "90f513a1",
+   "id": "23fac86a",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "23738e66",
+   "id": "9853baca",
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d66aa978",
+   "id": "df81a919",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c488f40f",
+   "id": "6e2655b0",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a94b035e",
+   "id": "ae564907",
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9e95516e",
+   "id": "bf702a62",
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4585afd9",
+   "id": "c5700c74",
    "metadata": {},
    "source": [
     "There aren't any major issues with the years."
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "951ddf26",
+   "id": "f0dd538f",
    "metadata": {},
    "source": [
     "## Create a New Column\n",
@@ -1950,7 +1950,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "50acfac2",
+   "id": "9f268560",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deeb92ef",
+   "id": "52719440",
    "metadata": {},
    "source": [
     "## Identify Dissatisfied Employees\n",
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b20ec99",
+   "id": "f869ebcc",
    "metadata": {},
    "source": [
     "We'll transfrms values of We'll transform the values of the columns of tafe_resignations  we'll use into boolean values.the columns we'll us into boolean values."
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a73415df",
+   "id": "217ff7bd",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a5b3bdd1",
+   "id": "45436ed1",
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b3ff1d",
+   "id": "73eb20d7",
    "metadata": {},
    "source": [
     "We'll define a `update_vals`  function that transforms values of the `Contributing Factors. Dissatisfaction`, `Contributing Factors. Job Dissatisfaction` columns in `tafe_resignations`.\n",
@@ -2106,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "588a008d",
+   "id": "5cec436a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2122,7 +2122,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5e210644",
+   "id": "d6a4d297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "92995417",
+   "id": "dc4409f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ea1ec922",
+   "id": "558a12dc",
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b93f4cef",
+   "id": "23c78abf",
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "38469f31",
+   "id": "f27853d4",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c5341579",
+   "id": "e7291a5d",
    "metadata": {},
    "outputs": [
     {
@@ -2237,6 +2237,126 @@
     "dete_resignations['dissatisfied'] = dete_resignations[columns_resignations].any(axis=1)\n",
     "dete_resignations_up = dete_resignations.copy()\n",
     "dete_resignations_up['dissatisfied'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30ee5d11",
+   "metadata": {},
+   "source": [
+    "## Combine the Data\n",
+    "\n",
+    "We're ready to combine our datasets. Our end goal is to aggregate the data according to the institute_service column. We'll create a new institute column with `DETE` and `TAFE` respectively in each dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7f6bd372",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torres_strait                                            0\n",
+       "south_sea                                                3\n",
+       "aboriginal                                               7\n",
+       "disability                                               8\n",
+       "nesb                                                     9\n",
+       "business_unit                                           32\n",
+       "classification                                         161\n",
+       "region                                                 265\n",
+       "role_start_date                                        271\n",
+       "dete_start_date                                        283\n",
+       "role_service                                           290\n",
+       "none_of_the_above                                      311\n",
+       "work_life_balance                                      311\n",
+       "traumatic_incident                                     311\n",
+       "ill_health                                             311\n",
+       "study/travel                                           311\n",
+       "relocation                                             311\n",
+       "maternity/family                                       311\n",
+       "employment_conditions                                  311\n",
+       "workload                                               311\n",
+       "lack_of_job_security                                   311\n",
+       "career_move_to_public_sector                           311\n",
+       "career_move_to_private_sector                          311\n",
+       "interpersonal_conflicts                                311\n",
+       "work_location                                          311\n",
+       "dissatisfaction_with_the_department                    311\n",
+       "physical_work_environment                              311\n",
+       "lack_of_recognition                                    311\n",
+       "job_dissatisfaction                                    311\n",
+       "Contributing Factors. Job Dissatisfaction              332\n",
+       "Contributing Factors. Travel                           332\n",
+       "Contributing Factors. Maternity/Family                 332\n",
+       "Contributing Factors. Ill Health                       332\n",
+       "Contributing Factors. Career Move - Self-employment    332\n",
+       "Contributing Factors. Career Move - Private Sector     332\n",
+       "Contributing Factors. Career Move - Public Sector      332\n",
+       "Contributing Factors. Dissatisfaction                  332\n",
+       "Contributing Factors. Other                            332\n",
+       "Contributing Factors. Interpersonal Conflict           332\n",
+       "Contributing Factors. NONE                             332\n",
+       "Contributing Factors. Study                            332\n",
+       "Institute                                              340\n",
+       "WorkArea                                               340\n",
+       "institute_service                                      563\n",
+       "gender                                                 592\n",
+       "age                                                    596\n",
+       "employment_status                                      597\n",
+       "position                                               598\n",
+       "cease_date                                             635\n",
+       "dissatisfied                                           651\n",
+       "separationtype                                         651\n",
+       "institute                                              651\n",
+       "id                                                     651\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations_up['institute'] = 'DETE' \n",
+    "tafe_resignations_up['institute'] = 'TAFE'\n",
+    "combined = pd.concat([dete_resignations_up, tafe_resignations_up], ignore_index=True)\n",
+    "\n",
+    "combined.notnull().sum().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ddbf1110",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                    0\n",
+       "separationtype        0\n",
+       "cease_date           16\n",
+       "position             53\n",
+       "employment_status    54\n",
+       "gender               59\n",
+       "age                  55\n",
+       "institute_service    88\n",
+       "dissatisfied          0\n",
+       "institute             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_updated = combined.dropna(thresh = 500, axis =1).copy()\n",
+    "combined_updated.isnull().sum()"
    ]
   }
  ],
