3. Exploring Race and SAT Scores

--- a/Analyzing_NYC_High_School_Data/Schools.ipynb
+++ b/Analyzing_NYC_High_School_Data/Schools.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: saf_s_11, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -575,69 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.8      1\n",
-       "2.9      1\n",
-       "4.5      1\n",
-       "5.3      1\n",
-       "5.8      2\n",
-       "        ..\n",
-       "84.7     1\n",
-       "87.6     1\n",
-       "88.1     1\n",
-       "99.8     3\n",
-       "100.0    1\n",
-       "Name: hispanic_per, Length: 191, dtype: int64"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined['hispanic_per'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "887.0     1\n",
-       "913.0     1\n",
-       "934.0     1\n",
-       "939.0     1\n",
-       "951.0     1\n",
-       "         ..\n",
-       "1868.0    1\n",
-       "1910.0    1\n",
-       "1920.0    1\n",
-       "1953.0    1\n",
-       "1969.0    1\n",
-       "Name: sat_score, Length: 181, dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined['sat_score'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +584,7 @@
        "<AxesSubplot:xlabel='hispanic_per', ylabel='sat_score'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -692,12 +630,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They appear to be schools for recently migrant students who are learning English."
+    "They appear to be schools for recently migrant students who are learning English, this can explain the low SAT scores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -714,6 +652,13 @@
    ],
    "source": [
     "print(combined[(combined[\"hispanic_per\"] < 10) & (combined[\"sat_score\"] > 1800)][\"SCHOOL NAME\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "They seem to be specialized schools in science or technical schools this cannot be taken as a coincidence of the low SAT scores."
    ]
   }
  ],
